更新开发文档

--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -19,6 +19,15 @@ CREATE TABLE IF NOT EXISTS `job` (
 ) ENGINE=InnoDB COMMENT="后台任务记录";
 ```
 ```sql
+CREATE TABLE IF NOT EXISTS `campus_news` (
+    `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
+    `name` VARCHAR(100) NOT NULL COMMENT "用户",
+    `img_url` VARCHAR(200) COMMENT "图片的url",
+    `forward_url` VARCHAR(200) COMMENT "跳转的url",
+    PRIMARY KEY (`id`)
+) ENGINE=InnoDB COMMENT="校园新闻";
+```
+```sql
 CREATE TABLE IF NOT EXISTS `user` (
     `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
     `name` VARCHAR(100) NOT NULL COMMENT "用户",
@@ -30,8 +39,17 @@ CREATE TABLE IF NOT EXISTS `user` (
 ) ENGINE=InnoDB COMMENT="用户表";
 ```
 ```sql
+CREATE TABLE IF NOT EXISTS `resource_right_to_audit` (
+    `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
+    `user_id` BIGINT NOT NULL COMMENT "可以审核资源的用户ID",
+    `resource_id` BIGINT NOT NULL COMMENT "资源",
+    PRIMARY KEY (`id`)
+) ENGINE=InnoDB COMMENT="物资";
+```
+```sql
 CREATE TABLE IF NOT EXISTS `resource` (
     `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
+    `user_id` BIGINT NOT NULL COMMENT "拥有这个资源的用户ID",
     `name` VARCHAR(100) NOT NULL COMMENT "资源名",
     `description` VARCHAR(300) COMMENT "资源描述",
     `amount` BIGINT DEFAULT 0 NOT NULL COMMENT "资源的数量",
@@ -41,13 +59,17 @@ CREATE TABLE IF NOT EXISTS `resource` (
 ) ENGINE=InnoDB COMMENT="物资";
 ```
 ```sql
-CREATE TABLE IF NOT EXISTS `campus_news` (
+CREATE TABLE IF NOT EXISTS `resource_change` (
     `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
-    `name` VARCHAR(100) NOT NULL COMMENT "用户",
-    `img_url` VARCHAR(200) COMMENT "图片的url",
-    `forward_url` VARCHAR(200) COMMENT "跳转的url",
+    `user_id` BIGINT NOT NULL COMMENT "操作这个资源的用户ID",
+    `resource_id` BIGINT NOT NULL COMMENT "资源对应的ID",
+    `description` VARCHAR(300) COMMENT "资源去向或者增加描述",
+    `change_amount` Integer NOT NULL COMMENT "资源的改变的数量",
+    `operate_time` DATETIME NOT NULL COMMENT "有效期开始时间",
+    `status` TINYINT NOT NULL DEFAULT 0 COMMENT "审核的状态 0：未审核 1：批准 3 ：拒绝",
+    `status_description` VARCHAR(300) COMMENT "审核描述",
     PRIMARY KEY (`id`)
-) ENGINE=InnoDB COMMENT="校园新闻";
+) ENGINE=InnoDB COMMENT="物资";
 ```
 ```sql
 CREATE TABLE IF NOT EXISTS `reimbursement` (
@@ -56,11 +78,36 @@ CREATE TABLE IF NOT EXISTS `reimbursement` (
     `reimbursement_type` TINYINT NOT NULL COMMENT "报销类型",
     `event` VARCHAR(100) NOT NULL COMMENT "报销的具体事宜",
     `pay_way` TINYINT NOT NULL COMMENT "支付的方式",
-    `pay_detail` VARCHAR(100) NOT NULL COMMENT "支付的具体信息",
+    `pay_detail` VARCHAR(100) NOT NULL COMMENT "支付方式的信息",
     `prove_type` TINYINT NOT NULL COMMENT "证明材料类型",
     `prove_detail` TEXT NOT NULL COMMENT "证明材料的具体信息",
-    `event_start_time` DATETIME COMMENT "具体的时间点",
-    `event_end_time` DATETIME COMMENT "具体的时间点",
+    `event_start_time` DATETIME COMMENT "具体的开始时间点",
+    `event_end_time` DATETIME COMMENT "具体的结束时间点",
     PRIMARY KEY (`id`)
 ) ENGINE=InnoDB COMMENT="报销";
 ```
+```sql
+CREATE TABLE IF NOT EXISTS `classroom` (
+    `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
+    `name` VARCHAR(100) NOT NULL COMMENT "课室名",
+    `location_first` TINYINT NOT NULL COMMENT "课室大位置",
+    `location_second` Integer NOT NULL COMMENT "课室小位置",
+    'capacity' Integer NOT NULL COMMENT "容量",
+    PRIMARY KEY (`id`)
+) ENGINE=InnoDB COMMENT="课室";
+```
+```sql
+CREATE TABLE IF NOT EXISTS `classroom_present_request` (
+    `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
+    `class_id` BIGINT NOT NULL COMMENT "想要申请教室的ID",
+    `user_id` BIGINT NOT NULL COMMENT "申请的用户ID",
+    `description` VARCHAR(300) COMMENT "申请的事宜描述",
+    `present_day` DATETIME NOT NULL COMMENT "具体的开始时间点",
+    `start_time` Integer NOT NULL COMMENT "具体的开始时间点",
+    `end_time` Integer NOT NULL COMMENT "具体的结束时间点",
+    `prove_type` TINYINT NOT NULL COMMENT "证明材料类型",
+    `prove_detail` TEXT NOT NULL COMMENT "证明材料的具体信息",
+    PRIMARY KEY (`id`)
+) ENGINE=InnoDB COMMENT="课室申请";
+```
+
