初步完成增删改查信息

--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -92,7 +92,7 @@ CREATE TABLE IF NOT EXISTS `classroom` (
     `name` VARCHAR(100) NOT NULL COMMENT "课室名",
     `location_first` TINYINT NOT NULL COMMENT "课室大位置",
     `location_second` Integer NOT NULL COMMENT "课室小位置",
-    'capacity' Integer NOT NULL COMMENT "容量",
+    `capacity` Integer NOT NULL COMMENT "容量",
     PRIMARY KEY (`id`)
 ) ENGINE=InnoDB COMMENT="课室";
 ```
