--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -32,6 +32,7 @@ CREATE TABLE IF NOT EXISTS `user` (
     `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
     `name` VARCHAR(100) NOT NULL COMMENT "用户",
     `role` TINYINT NOT NULL DEFAULT 0 COMMENT "用户的角色",
+    `password` VARCHAR(100) NOT NULL COMMENT "密码",
     `department` VARCHAR(100) COMMENT "学院",
     `major` VARCHAR(100) COMMENT "专业",
     `number` VARCHAR(100) COMMENT "学号或教师号",
