--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -52,6 +52,7 @@ CREATE TABLE IF NOT EXISTS `resource` (
     `user_id` BIGINT NOT NULL COMMENT "拥有这个资源的用户ID",
     `name` VARCHAR(100) NOT NULL COMMENT "资源名",
     `description` VARCHAR(300) COMMENT "资源描述",
+    `type` TINYINT NOT NULL COMMENT "物资类型",
     `amount` BIGINT DEFAULT 0 NOT NULL COMMENT "资源的数量",
     `effect_start_time` DATETIME NOT NULL COMMENT "有效期开始时间",
     `effect_end_time` DATETIME NOT NULL COMMENT "有效期结束时间",
