再资源改变表添加证明材料相关字段

--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -67,6 +67,8 @@ CREATE TABLE IF NOT EXISTS `resource_change` (
     `description` VARCHAR(300) COMMENT "资源去向或者增加描述",
     `change_amount` Integer NOT NULL COMMENT "资源的改变的数量",
     `operate_time` DATETIME NOT NULL COMMENT "有效期开始时间",
+    `prove_type` TINYINT NOT NULL COMMENT "证明材料类型",
+    `prove_detail` TEXT NOT NULL COMMENT "证明材料的具体信息",
     `status` TINYINT NOT NULL DEFAULT 0 COMMENT "审核的状态 0：未审核 1：批准 3 ：拒绝",
     `status_description` VARCHAR(300) COMMENT "审核描述",
     PRIMARY KEY (`id`)
