--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -53,6 +53,7 @@ CREATE TABLE IF NOT EXISTS `resource` (
     `id` BIGINT NOT NULL AUTO_INCREMENT COMMENT "id",
     `user_id` BIGINT NOT NULL COMMENT "拥有这个资源的用户ID",
     `name` VARCHAR(100) NOT NULL COMMENT "资源名",
+    `img` VARCHAR(100) COMMENT "资源图片",
     `description` VARCHAR(300) COMMENT "资源描述",
     `type` TINYINT NOT NULL COMMENT "物资类型",
     `amount` BIGINT DEFAULT 0 NOT NULL COMMENT "资源的数量",
