--- a/doc/开发文档.md
+++ b/doc/开发文档.md
@@ -84,10 +84,9 @@ CREATE TABLE IF NOT EXISTS `reimbursement` (
     `event` VARCHAR(100) NOT NULL COMMENT "报销的具体事宜",
     `pay_way` TINYINT NOT NULL COMMENT "支付的方式",
     `pay_detail` VARCHAR(100) NOT NULL COMMENT "支付方式的信息",
-    `prove_type` TINYINT NOT NULL COMMENT "证明材料类型",
     `prove_detail` TEXT NOT NULL COMMENT "证明材料的具体信息",
     `event_start_time` DATETIME COMMENT "具体的开始时间点",
-    `event_end_time` DATETIME COMMENT "具体的结束时间点",
+    `status` TINYINT NOT NULL DEFAULT 0 COMMENT "审核的状态",
     PRIMARY KEY (`id`)
 ) ENGINE=InnoDB COMMENT="报销";
 ```
